# AMfeta99.github.io

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AMfeta99.github.io.code-workspace  MANUAL_UPDATE_GUIDE.md  README.md  README.txt  academic&career.html  certificates.html  elements.html  generic.html  index.html  index.md  me.html  proj&pub.html  proj.html  pub.html  pyproject.toml  robots.txt  sitemap.xml  tech-stack-section.html
.github/workflows/: ci.yml  deploy.yml
assets/css/: associations.css  certificates.css  enhancements.css  main.css  modern-overrides.css  pub_style.css  work_exp.css
assets/js/: certificados.js  enhancements.js  main.js  me.js  pub.js  work_descrip.js
assets/sass/: main.scss
assets/sass/libs/: _breakpoints.scss
scripts/: validate_links.py
src/: academic&career.html  index.html  me.html  proj.html  pub.html
tests/: test_links.py
